--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
 <h1>Välkommen till min första webbsida!</h1>
 <p>Det här är en webbsida som jag hostar via GitHub.</p>
+<p>Jag har uppdaterat sidan!</p>
 </body>
 </html>
